Moved static character css back to style.css due to some weird bugs where the sticks flayed wildly when jumping and sliding

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,39 @@ body{
 	position: relative;
 }
 
+#game-canvas{
+	width: 512px;
+	height: 384px;
+	background-color: #488BE4;
+}
+
+.game-board{
+	width: 512px;
+	height: 384px;
+	overflow: hidden;
+	position: relative;
+}
+.score-container{
+	float: left;
+	width: 100px;
+}
+
+.round-container{
+	float: right;
+	width: 100px;
+	margin-right: 15px; 
+}
+
+.score{
+	position: absolute;
+	margin: 0 10px;
+}
+
+.round{
+	position: absolute;
+	margin: 0 10px 0px;
+}
+
 .center-margin{
 	margin: 0 auto;
 }
@@ -17,68 +50,6 @@ body{
 
 .transition-time{
 	transition: .3s;
-}
-
-#game-canvas{
-	width: 512px;
-	height: 384px;
-	background-color: #488BE4;
-}
-
-.game-board{
-	width: 512px;
-	height: 384px;
-	overflow: hidden;
-	position: relative;
-}
-
-.score-container{
-	left: 10px;
-	width: 100px;
-	text-align: left;
-	position: absolute;
-}
-
-.round-container{
-	right: 10px;
-	width: 100px;
-	text-align: right;
-	position: absolute;
-}
-
-.score{
-	margin: 0 10px;
-}
-
-.round{
-	margin: 0 10px;
-}
-
-@keyframes round-anim{
-	50%{
-	}
-	100%{
-		font-size: 150%;
-		-webkit-transform: translateX(-200%) translateY(600%);
-	}
-}
-
-@keyframes round-span-anim{
-	90%{
-		-webkit-transform: rotateZ(0deg);		
-	}
-	100%{
-		-webkit-transform: rotateZ(90deg);
-	}
-}
-
-.new-round{
-	animation: round-anim 1s linear forwards;
-	animation-fill-mode: forwards;
-}
-
-.new-round span{
-	animation: round-span-anim 1s linear;
 }
 
 /*
@@ -109,4 +80,62 @@ body{
 
 .jump-block{
 	bottom: 0px;
+}
+
+/*
+	Stick figure body 
+*/
+.stick-figure{
+	height: 90px;
+	width: 50px;
+	top: 292px;
+	left: 50px;
+	z-index: 1;
+}
+
+.stick-width{
+	width: 5px;
+}
+
+.head{
+	height: 30px;
+	width: 30px;
+	left: 10px;
+	border-radius: 50%;
+}
+
+.torso{
+	height: 35px;
+	left: 22px;
+	top: 30px;
+}
+
+.arms{
+	height: 30px;
+	top: 35px;
+}
+
+.arm-0{
+	left: 15px;
+	-webkit-transform: rotate(25deg);
+}
+
+.arm-1{
+	right: 15px;
+	-webkit-transform: rotate(-25deg);
+}
+
+.legs{
+	height: 30px;
+	top: 60px;
+}
+
+.leg-0{
+	left: 13px;
+	-webkit-transform: rotate(35deg);
+}
+
+.leg-1{
+	right: 13px;
+	-webkit-transform: rotate(-35deg);
 }
